--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <div class="container">
     <h1>Piano Note Guessing Game</h1>
-    
-    <div class="controls">
+
+    <div id="controls">
       <button id="startBtn">Start Game</button>
       <button id="playNoteBtn" disabled>Replay Note</button>
       <button id="playReferenceBtn">Play Reference Note - C4</button>
@@ -19,13 +18,16 @@
       <button id="resetScoreBtn">Reset Score</button>
     </div>
 
-    <div class="buttons" id="noteButtons"></div>
+    <div id="noteButtons"></div>
 
-    <div class="scoreboard">
-      <p>Correct: <span id="correctCount">0</span></p>
-      <p>Incorrect: <span id="incorrectCount">0</span></p>
-      <p>Total: <span id="totalCount">0</span></p>
-      <p>Accuracy: <span id="accuracy">0%</span></p>
+    <div id="feedback" class="feedback"></div> <!-- Feedback text goes here -->
+
+    <div class="stats">
+      <h2>Score</h2>
+      <span>Correct: <span id="correctCount">0</span></span>
+      <span>Incorrect: <span id="incorrectCount">0</span></span>
+      <span>Total: <span id="totalCount">0</span></span>
+      <span>Accuracy: <span id="accuracy">0%</span></span>
     </div>
   </div>
 
